--- a/docs/pages/components/alert.mdx
+++ b/docs/pages/components/alert.mdx
@@ -1,5 +1,5 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
-import { InfoAlert, SuccessAlert, CautionAlert, ErrorAlert } from "components/examples/Alert";
+import { InfoAlert, SuccessAlert, CautionAlert, ErrorAlert,InfoAlertNonIntrusive } from "components/examples/Alert";
 import { Example } from "components/examples/Example";
 import { Alert } from "@nice-digital/nds-alert";
 
@@ -15,7 +15,7 @@ export const meta = {
 
 Alerts are used to notify users of important information or changes on a page. Typically, they appear at the top of a page following a submit action. 
 
-By default, alerts are set to interrupt the user’s activity but can be set to ‘polite’ so the alert is announced without interrupting the user.[Non-intrusive alert option](#non-intrusive-alert-option)
+By default, alerts are set to interrupt the user’s activity but [can be set to ‘polite’](#non-intrusive-alert-option) so the alert is announced without interrupting the user.
 
 
 There are four variations of the alert component: information, success, error and caution.
@@ -34,7 +34,7 @@ There are four variations of the alert component: information, success, error an
 </Alert>
 ```
 ```html HTML
-<div class="alert alert--info" data-component="alert--info" aria-live="polite" aria-atomic="true">
+<div class="alert alert--info" data-component="alert--info" role="alert">
 	<h3>Info alert</h3>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 </div>
@@ -160,7 +160,7 @@ Do not use the caution alert if the information is about something other than a 
 
 <Example>
 <h4>Example: info alert (non-intrusive)</h4>
-<InfoAlert />
+<InfoAlertNonIntrusive/>
 
 <CH.Code>
 ```js React
@@ -191,7 +191,7 @@ Example of polite alerts are non-critical status updates, such as:
 ## Accessibility
 
 Component meets WCAG AA guidelines for accessibility on: 
-- Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and at least 3:1 for large text (WCAG 2.0 1.4.3). 
+- Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and at least 3:1 for large text (WCAG 2.2 - 1.4.3). 
 - UI contrast - Visual information required to identify components and states (except inactive components) has a contrast ratio of at least 3:1 (WCAG 2.1 1.4.11). 
 - Accessible use of colour - Colour is not used as the only visual means of conveying information (WCAG 2.0 1.4.1).
 
