--- a/docs/pages/components/radio.mdx
+++ b/docs/pages/components/radio.mdx
@@ -287,54 +287,13 @@ If you’re asking a question that needs a detailed explanation, don’t use hin
 
 ## Errors
 
-<Example>
-<ErrorRadio />
+Display an error message if the user has not: 
 
-<CH.Code>
-```js React
-<FormGroup
-		legend="Are you happy for us to contact you in the future?"
-		name="contact-preference"
-	>
-		<Radio error={true} label="Yes" value="Yes" name="errorradio" />
-		<Radio label="No" value="No" name="errorradio" />
-	</FormGroup>
-```
-```html HTML
-<fieldset class="form-group" data-component="form-group">
-  <legend class="form-group__legend">
-    Are you happy for us to contact you in the future?
-  </legend>
+-   selected any radios that are required fields. 
 
-  <p class="radio__error-message"></p>
+### How to use error messages 
 
-  <div class="radio radio--error" data-component="radio">
-    <input
-      class="radio__input"
-      name="contact-preference"
-      type="radio"
-      id="contact-preference_Yes"
-      value="yes"
-    />
-    <label class="radio__label" for="contact-preference_Yes">Yes</label>
-  </div>
-
-  <div class="radio" data-component="radio">
-    <input
-      class="radio__input"
-      name="contact-preference"
-      type="radio"
-      id="contact-preference_No"
-      value="no"
-    />
-    <label class="radio__label" for="contact-preference_No">No</label>
-  </div>
-</fieldset>
-```
-</CH.Code>
-</Example>
-
-### Error with message
+Error messages are styled like this:  
 
 <Example>
 <ErrorHintRadio />
@@ -407,9 +366,9 @@ We use a custom style for radio buttons, so they're more prominent and easier to
 
 Component meets WCAG AA guidelines for accessibility on: 
 
-- Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and at least 3:1 for large text (WCAG 2.2 1.4.3).
-- UI contrast - Visual information required to identify components and states (except inactive components) has a contrast ratio of at least 3:1(WCAG 2.1 1.4.11).
-- Accessible use of colour - Colour is not used as the only visual means of conveying information (WCAG 2.0 1.4.1).
+- Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and at least 3:1 for large text (WCAG 2.2 - 1.4.3).
+- UI contrast - Visual information required to identify components and states (except inactive components) has a contrast ratio of at least 3:1(WCAG 2.2 - 1.4.11).
+- Accessible use of colour - Colour is not used as the only visual means of conveying information (WCAG 2.2 - 1.4.1).
 
 ## Research/evidence
 
